--- a/mrcleaner/okna.html
+++ b/mrcleaner/okna.html
@@ -17,7 +17,7 @@
 <body class="bg-2">
 <div class="wrapper-hidden">
     <div class="mob-header"></div>
-	<header class="header fixed clearfix wrap">
+	<header class="header fixed clearfix wrap mh-head mm-sticky">
 		<div class="logo"><a href=""><img src="img/logo.png" alt="" class="header__logo"><img src="img/logo-mob.png" alt="" class="header__logo_mob"></a></div>
 		<nav class="top-menu">
 			<ul>
