--- a/mrcleaner/job.html
+++ b/mrcleaner/job.html
@@ -9,14 +9,18 @@
 	<link rel="stylesheet" href="scss/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="js/script.js"></script>
+	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jQuery.mmenu/6.1.7/jquery.mmenu.all.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.mmenu/6.1.7/jquery.mmenu.all.js"></script>
 </head>
 <body>
 <div class="wrapper-hidden">
 	<div class="mob-header"></div>
-	<header class="header fixed clearfix wrap">
+	<header class="header fixed clearfix wrap mh-head mm-sticky">
 		<div class="logo"><a href=""><img src="img/logo.png" alt="" class="header__logo"><img src="img/logo-mob.png" alt="" class="header__logo_mob"></a></div>
 		<a href="tel:8(3822)977902" class="header__phone">Звоните 8 (3822) 977-902</a>
-		<img src="img/hamb.png" alt="" class="modal-run">
+		<a href="#menu" class="modal-run"><img src="img/hamb.png" alt=""></a>
 	</header>
 	<div class="banner">
 		<div class="wrap">
@@ -116,8 +120,9 @@
 		<a class="footer2__mail" href="mailto:job@mcleaner.pro">job@mcleaner.pro</a>
 	</div>
 	<!-- Modal mobile menu -->
-    <div class="modal-form">
-        <span class="modal-close"><img src="img/close.png" alt=""></span>
+    <div id="menu" class="modal-form">
+        <span class="modal-close"><a href="#page"><img src="img/close.png" alt=""></a></span>
+        <ul>
         <div class="modal-form__top">
             <h2>Mister Cleaner <br>
                 <span>Сервис заказа уборки</span>
@@ -147,6 +152,7 @@
             <button class="modal-form__butt modal-form__butt_a">ЗАКАЗАТЬ УБОРКУ</button>
             <a href="tel:8 (3822) 977-262" class="modal-form__butt modal-form__butt_b"><img src="img/mob5.png" alt="">8 (3822) 977-262</a>
         </div>
+        </ul>
     </div>
     <div class="overlay"></div>
     <!-- Modal mobile menu end -->
