--- a/nimax/index.html
+++ b/nimax/index.html
@@ -669,7 +669,7 @@
 					</ul>
 				</nav>
 				<div class="headerbott__phone phone">
-					<button class="phone__butt">Заказать звонок</button>
+					<button class="phone__butt modal-run">Заказать звонок</button>
 					<i></i>
 					<div href="" class="phone__number">
 						<a href=""><span>+7 (495)</span> 151-93-33</a>
@@ -686,7 +686,7 @@
 					заборов «под ключ»</span>
 				</div>
 				<div class="headerbott__phone phone">
-					<button class="phone__butt">Заказать звонок</button>
+					<button class="phone__butt modal-run">Заказать звонок</button>
 					<i></i>
 					<div href="" class="phone__number">
 						<a href=""><span>+7 (495)</span> 151-93-33</a>
@@ -740,7 +740,7 @@
 					<a href=""><span>+7 (495)</span> 151-93-33</a>
 					<p>Прием заявок с 10 до 22</p>
 				</div> <br>
-				<button class="phone__butt phone__butt_footer">Заказать звонок</button>
+				<button class="phone__butt phone__butt_footer modal-run">Заказать звонок</button>
 				<br>
 				<a href=""><i class="phone__soc phone__soc_1"></i></a>
 				<a href=""><i class="phone__soc phone__soc_2"></i></a>
@@ -755,7 +755,32 @@
 
 </div>		
 
-<div class="icon-load"></div>		
+<div class="icon-load"></div>	
+
+<!--Modal window-->
+	<div class="modal-form">
+		<span class="modal-close"><img src="img/close.png" alt=""></span>
+		<h3 class="modal__title">заказать звонок</h3>
+		<div class="contus">
+			<div class="contus__item">
+				<label for="">Введите ваше имя</label> <br>
+				<input type="text" placeholder="Артем Реут">
+			</div>
+			<div class="contus__item">
+				<label for="">Телефон</label><br>
+				<input type="text" placeholder="+ 7 978 705 05 05">
+			</div>
+			<div class="contus__item">
+				<label for="">Электронная почта</label><br>
+				<input type="email" placeholder="domen@mail.ru">
+			</div>
+			<div class="contus__item">
+				<input type="submit" value="оставить заявку">
+			</div>
+		</div>
+	</div>
+	<div class="overlay"></div>
+	<!--Modal window end-->	
 
 <!-- BODY EOF   -->
 	
