--- a/nimax/page.html
+++ b/nimax/page.html
@@ -389,35 +389,35 @@
 				</div>
 				<h2 class="main__title">фото готовых проектов</h2>
 				<div class="main__fence fence">
-					<div class="fence__box">
+					<div class="fence__box fence__box_page">
 						<img src="img/fence1.jpg" alt="" class="fence__img fence__img_nm">
 					</div>
-					<div class="fence__box">
+					<div class="fence__box fence__box_page">
 						<img src="img/fence2.jpg" alt="" class="fence__img fence__img_nm">
 					</div>
-					<div class="fence__box">
+					<div class="fence__box fence__box_page">
 						<img src="img/fence3.jpg" alt="" class="fence__img fence__img_nm">
 					</div>
 				</div>
 				<div class="main__fence fence">
-					<div class="fence__box">
+					<div class="fence__box fence__box_page">
 						<img src="img/fence4.jpg" alt="" class="fence__img fence__img_nm">
 					</div>
-					<div class="fence__box">
+					<div class="fence__box fence__box_page">
 						<img src="img/fence5.jpg" alt="" class="fence__img fence__img_nm">
 					</div>
-					<div class="fence__box">
+					<div class="fence__box fence__box_page">
 						<img src="img/fence6.jpg" alt="" class="fence__img fence__img_nm">
 					</div>
 				</div>
-				<div class="main__fence fence">
-					<div class="fence__box">
+				<div class="main__fence  fence">
+					<div class="fence__box fence__box_page">
 						<img src="img/fence1.jpg" alt="" class="fence__img fence__img_nm">
 					</div>
-					<div class="fence__box">
+					<div class="fence__box fence__box_page">
 						<img src="img/fence2.jpg" alt="" class="fence__img fence__img_nm">
 					</div>
-					<div class="fence__box">
+					<div class="fence__box fence__box_page">
 						<img src="img/fence3.jpg" alt="" class="fence__img fence__img_nm">
 					</div>
 				</div>
