--- a/nimax/index.html
+++ b/nimax/index.html
@@ -202,7 +202,7 @@
 					</div>
 				</div>
 				<h2 class="main__title">ВИДЫ ЗАБОРОВ</h2>
-				<div class="main__fence fence">
+				<div class="main__fence fence clearfix">
 					<div class="fence__box">
 						<img src="img/fence1.jpg" alt="" class="fence__img">
 						<h2 class="fence__title">ЗАБОРЫ ИЗ <br> ПРОФНАСТИЛА</h2>
