--- a/staticwindow/index.html
+++ b/staticwindow/index.html
@@ -24,30 +24,30 @@
 					<h2>блокировщик</h2>
 					<p>рекламы</p>
 				</div>
-				<div class="mainblock__item mainblock__item_r mainblock__item_1">
+				<a href="https://chrome.google.com/webstore/detail/%D1%83%D0%BC%D0%BD%D1%8B%D0%B9-%D0%B1%D0%BB%D0%BE%D0%BA%D0%B8%D1%80%D0%BE%D0%B2%D1%89%D0%B8%D0%BA-%D1%80%D0%B5%D0%BA%D0%BB%D0%B0%D0%BC%D1%8B/ppijohgkcelimmkdgijjjplijehbpanp?hl=ru"><div class="mainblock__item mainblock__item_r mainblock__item_1">
 					<span>Вы устали от<br> рекламы в браузере?</span>
 					<div class="mainblock__img">
 						<img src="img/icon1.png" alt="">
 					</div>
-				</div>
-				<div class="mainblock__item mainblock__item_2">
+				</div></a>
+				<a href="https://chrome.google.com/webstore/detail/%D1%83%D0%BC%D0%BD%D1%8B%D0%B9-%D0%B1%D0%BB%D0%BE%D0%BA%D0%B8%D1%80%D0%BE%D0%B2%D1%89%D0%B8%D0%BA-%D1%80%D0%B5%D0%BA%D0%BB%D0%B0%D0%BC%D1%8B/ppijohgkcelimmkdgijjjplijehbpanp?hl=ru"><div class="mainblock__item mainblock__item_2">
 					<div class="mainblock__img">
 						<img src="img/icon2.png" alt="">
 					</div>
 					<span>Вам надоели <br> всплывающие окна?</span>
-				</div>
-				<div class="mainblock__item mainblock__item_r mainblock__item_3">
+				</div></a>
+				<a href="https://chrome.google.com/webstore/detail/%D1%83%D0%BC%D0%BD%D1%8B%D0%B9-%D0%B1%D0%BB%D0%BE%D0%BA%D0%B8%D1%80%D0%BE%D0%B2%D1%89%D0%B8%D0%BA-%D1%80%D0%B5%D0%BA%D0%BB%D0%B0%D0%BC%D1%8B/ppijohgkcelimmkdgijjjplijehbpanp?hl=ru"><div class="mainblock__item mainblock__item_r mainblock__item_3">
 					<span>Никаких сложных<br> настроек, все просто!</span>
 					<div class="mainblock__img">
 						<img src="img/icon3.png" alt="">
 					</div>
-				</div>
-				<div class="mainblock__item mainblock__item_4">
+				</div></a>
+				<a href="https://chrome.google.com/webstore/detail/%D1%83%D0%BC%D0%BD%D1%8B%D0%B9-%D0%B1%D0%BB%D0%BE%D0%BA%D0%B8%D1%80%D0%BE%D0%B2%D1%89%D0%B8%D0%BA-%D1%80%D0%B5%D0%BA%D0%BB%D0%B0%D0%BC%D1%8B/ppijohgkcelimmkdgijjjplijehbpanp?hl=ru"><div class="mainblock__item mainblock__item_4">
 					<div class="mainblock__img">
 						<img src="img/icon4.png" alt="">
 					</div>
 					<span>Всего один клик<br> и никакой рекламы!</span>
-				</div>
+				</div></a>
 			</div>
 		</div>		
 	</main>	
@@ -63,7 +63,7 @@
 				<p>В ВАШЕМ БРАУЗЕРЕ?</p>
 			</div>
 			<div class="installnow">
-				<button>УСТАНОВИТЬ СЕЙЧАС!</button>
+				<a href="https://chrome.google.com/webstore/detail/%D1%83%D0%BC%D0%BD%D1%8B%D0%B9-%D0%B1%D0%BB%D0%BE%D0%BA%D0%B8%D1%80%D0%BE%D0%B2%D1%89%D0%B8%D0%BA-%D1%80%D0%B5%D0%BA%D0%BB%D0%B0%D0%BC%D1%8B/ppijohgkcelimmkdgijjjplijehbpanp?hl=ru"><button>УСТАНОВИТЬ СЕЙЧАС!</button></a>
 			</div>
 		</div>		
 	</header>
