--- a/go6percent/index.html
+++ b/go6percent/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
 	<title>Главная</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
 </head>
 <body class="loaded">
 
@@ -160,42 +161,50 @@
 					подход сотрудников к работе обеспечивает высокие результаты</p>
 				</div>
 				<div class="adv__item">
-					<img src="img/round.png" alt="" class="adv__img">
-					<div class="adv__box adv__box_1">
-						<span>В компании работает команда <br> профессионалов</span>
-						<img src="img/icon4.png" alt="">
-					</div>
-					<div class="adv__box adv__box_2">
-						<span>В компании работает команда <br> профессионалов</span>
-						<img src="img/icon5.png" alt="">
-					</div>
-					<div class="adv__box adv__box_3">
-						<span>В компании работает команда <br> профессионалов</span>
-						<img src="img/icon6.png" alt="">
-					</div>
-					<div class="adv__box adv__box_4 adv__box_left">
-						<img src="img/icon7.png" alt="">
-						<span>В компании работает команда <br> профессионалов</span>
-					</div>
-					<div class="adv__box adv__box_5 adv__box_left">
-						<img src="img/icon8.png" alt="">
-						<span>В компании работает команда <br> профессионалов</span>	
-					</div>
-					<div class="adv__box adv__box_6 adv__box_left">
-						<img src="img/icon9.png" alt="">
-						<span>В компании работает команда <br> профессионалов</span>	
-					</div>
+					<div class="adv__round">
+						<img src="img/round.png" alt="" class="adv__img">
+						<div class="adv__box adv__box_1">
+							<span>В компании работает команда <br> профессионалов</span>
+							<img src="img/icon4.png" alt="">
+							<img src="img/1.png" alt="" class="adv__img_1">
+						</div>
+						<div class="adv__box adv__box_2">
+							<span>В компании работает команда <br> профессионалов</span>
+							<img src="img/icon5.png" alt="">
+							<img src="img/5.png" alt="" class="adv__img_5">
+						</div>
+						<div class="adv__box adv__box_3">
+							<span>В компании работает команда <br> профессионалов</span>
+							<img src="img/icon6.png" alt="">
+							<img src="img/3.png" alt="" class="adv__img_3">
+						</div>
+						<div class="adv__box adv__box_4 adv__box_left">
+							<img src="img/icon7.png" alt="">
+							<span>В компании работает команда <br> профессионалов</span>
+							<img src="img/2.png" alt="" class="adv__img_2">
+						</div>
+						<div class="adv__box adv__box_5 adv__box_left">
+							<img src="img/icon8.png" alt="">
+							<span>В компании работает команда <br> профессионалов</span>	
+							<img src="img/6.png" alt="" class="adv__img_6">
+						</div>
+						<div class="adv__box adv__box_6 adv__box_left">
+							<img src="img/icon9.png" alt="">
+							<span>В компании работает команда <br> профессионалов</span>	
+							<img src="img/4.png" alt="" class="adv__img_4">
+						</div>
+					</div>	
 				</div>
 			</div>
 		</div>
 		<div class="investors">
 			<div class="wrapper">
 				<div class="investors__item">
-					<h2>$ 2 758 904</h2>
+					<h2>2758904</h2>
 					<p>инвестиций</p>
 				</div>
 				<div class="investors__item">
-					<h2>308 695</h2>
+					<h2>308695</h2>
 					<p>Инвесторов</p>
 				</div>
 			</div>
@@ -322,9 +331,21 @@
 		<div class="headerbott">
 			<div class="wrapper">
 				<div class="headerbott__info">
-					<h2>ВЫСОКАЯ И СТАБИЛЬНАЯ<br> ПРИБЫЛЬ</h2>
-					<p>Go 6 Percen — лидер майнинга и трейдинга криптовалют на международных биржах! <br> За 5 лет работы мы достигли колоссальных результатов и теперь перед нами стоят<br> новые задачи. Мы приносим высокую и стабильную прибыль каждому нашему<br> партнеру. Присоединяйтесь к нам и повышайте свой доход!</p>
-					<button class="mainbutt">Стать инвестором!</button>
+					<div class="slide">
+						<h2>ВЫСОКАЯ И СТАБИЛЬНАЯ<br> ПРИБЫЛЬ</h2>
+						<p>Go 6 Percen — лидер майнинга и трейдинга криптовалют на международных биржах! <br> За 5 лет работы мы достигли колоссальных результатов и теперь перед нами стоят<br> новые задачи. Мы приносим высокую и стабильную прибыль каждому нашему<br> партнеру. Присоединяйтесь к нам и повышайте свой доход!</p>
+						<button class="mainbutt">Стать инвестором!</button>
+					</div>
+					<div class="slide">
+						<h2>ВЫСОКАЯ И СТАБИЛЬНАЯ<br> ПРИБЫЛЬ</h2>
+						<p>Go 6 Percen — лидер майнинга и трейдинга криптовалют на международных биржах! <br> За 5 лет работы мы достигли колоссальных результатов и теперь перед нами стоят<br> новые задачи. Мы приносим высокую и стабильную прибыль каждому нашему<br> партнеру. Присоединяйтесь к нам и повышайте свой доход!</p>
+						<button class="mainbutt">Стать инвестором!</button>
+					</div>
+					<div class="slide">
+						<h2>ВЫСОКАЯ И СТАБИЛЬНАЯ<br> ПРИБЫЛЬ</h2>
+						<p>Go 6 Percen — лидер майнинга и трейдинга криптовалют на международных биржах! <br> За 5 лет работы мы достигли колоссальных результатов и теперь перед нами стоят<br> новые задачи. Мы приносим высокую и стабильную прибыль каждому нашему<br> партнеру. Присоединяйтесь к нам и повышайте свой доход!</p>
+						<button class="mainbutt">Стать инвестором!</button>
+					</div>
 				</div>
 			</div>	
 		</div>
@@ -391,9 +412,10 @@
 	<!--
 	<script type="text/javascript" src="js/components/jquery.fancybox.js" ></script>
 	<script type="text/javascript" src="js/components/jquery.formstyler.js" ></script>
-	<script type="text/javascript" src="js/components/slick.js" ></script>
 	<script type="text/javascript" src="js/components/jquery.mCustomScrollbar.js" ></script>
 	-->
 	<script type="text/javascript" src="js/custom.js" ></script>
+	<script type="text/javascript" src="js/components/slick.js" ></script>
+	<script type="text/javascript" src="js/components/jquery.spincrement.js" ></script>
 </body>
 </html>
