--- a/go6percent/index.html
+++ b/go6percent/index.html
@@ -210,6 +210,16 @@
 			</div>
 		</div>	
 		<div class="wrapper">
+			<div class="calculator">
+				<div class="row">
+					<h2 class="row__title row__title_calc">Калькулятор депозита</h2>
+				</div>
+				<input class="calculator__summ" type="text" placeholder="Сумма депозита">
+				<input class="calculator__time" type="text" placeholder="Период">
+				<p>Результат:</p>
+				<p class="result">0</p>
+				<button class="mainbutt variant__butt calculator__butt">Подсчитать</button>
+			</div>
 			<div class="sert">
 				<div class="row">
 					<h2 class="row__title">Гарантии и сертификаты</h2>
