--- a/go6percent/index.html
+++ b/go6percent/index.html
@@ -7,6 +7,7 @@
 	<title>Главная</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body class="loaded">
 
@@ -115,6 +116,17 @@
 						<button class="mainbutt variant__butt">Инвестировать!</button>
 					</div>
 				</div>
+				<div class="calculator">
+					<div class="row">
+						<h2 class="row__title row__title_calc">Депозитное предложение от команды <span>Go6Percent</span></h2>
+					</div>
+					<input class="calculator__summ" type="text" placeholder="Сумма депозита"><span class="calculator__text">* 6% в день *</span>
+					<input class="calculator__time" type="text" placeholder="Период">
+					<p>=</p>
+					<p class="result">Получаете</p>
+					<br>
+					<button class="mainbutt variant__butt calculator__butt">Подсчитать</button>
+				</div>
 				<div class="row">
 					<h2 class="row__title row__title_small">Мы работаем с такими платежными системами:</h2>
 					<div class="row__border row__border_small"></div>
@@ -125,7 +137,6 @@
 					<img src="img/pay3.png" alt="" class="sponsors__item">
 					<img src="img/pay4.png" alt="" class="sponsors__item">
 					<img src="img/pay5.png" alt="" class="sponsors__item">
-					<img src="img/pay6.png" alt="" class="sponsors__item">
 				</div>
 			</div>
 		</div>
@@ -210,16 +221,6 @@
 			</div>
 		</div>	
 		<div class="wrapper">
-			<div class="calculator">
-				<div class="row">
-					<h2 class="row__title row__title_calc">Калькулятор депозита</h2>
-				</div>
-				<input class="calculator__summ" type="text" placeholder="Сумма депозита">
-				<input class="calculator__time" type="text" placeholder="Период">
-				<p>Результат:</p>
-				<p class="result">0</p>
-				<button class="mainbutt variant__butt calculator__butt">Подсчитать</button>
-			</div>
 			<div class="sert">
 				<div class="row">
 					<h2 class="row__title">Гарантии и сертификаты</h2>
@@ -252,6 +253,8 @@
 	</main>	
 			
 <!-- CONTENT EOF   -->
+
+	<img src="img/up.ico" alt="" class="upbutton">
 
 <!-- BEGIN HEADER -->
 
