--- a/go6percent/index.html
+++ b/go6percent/index.html
@@ -208,6 +208,31 @@
 				</div>
 			</div>
 		</div>
+		<div class="bitcoin">
+			<div class="row">
+				<h2 class="row__title">Зарабатывайте на курсе Bitcoin</h2>
+				<div class="row__border"></div>
+				<p class="row__subtitle">Зарабатывайте покупая/продавая Bitcoin в личном кабинете. Передайте средства в доверительное <br>
+				управление и наши трейдеры заработают для Вас.</p>
+			</div>
+			<div class="bitcoin__graph">
+				<img src="img/graph.png" alt="">
+				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_1">
+				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_2">
+				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_3">
+				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_4">
+				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_5">
+				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_6">
+				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_7">
+				<p class="bitcoin__day bitcoin__day_1">ПН.<span class="data1"></span></p>
+				<p class="bitcoin__day bitcoin__day_2">ВТ.<span class="data2"></span></p>
+				<p class="bitcoin__day bitcoin__day_3">СР.<span class="data3"></span></p>
+				<p class="bitcoin__day bitcoin__day_4">ЧТ.<span class="data4"></span></p>
+				<p class="bitcoin__day bitcoin__day_5">ПТ.<span class="data5"></span></p>
+				<p class="bitcoin__day bitcoin__day_6">СБ.<span class="data6"></span></p>
+				<p class="bitcoin__day bitcoin__day_7">ВС.<span class="data7"></span></p>
+			</div>
+		</div>
 		<div class="investors">
 			<div class="wrapper">
 				<div class="investors__item">
@@ -304,7 +329,7 @@
 				<nav class="headernav__navigation">
 					<ul>
 						<li class="toggle">
-							<a href="">Меню</a>
+							<a>Меню</a>
 							<img src="img/hamb.png" alt="">
 						</li>
 						<li><a href="">КОМПАНИи</a></li>
@@ -359,6 +384,27 @@
 						<p>Go 6 Percen — лидер майнинга и трейдинга криптовалют на международных биржах! <br> За 5 лет работы мы достигли колоссальных результатов и теперь перед нами стоят<br> новые задачи. Мы приносим высокую и стабильную прибыль каждому нашему<br> партнеру. Присоединяйтесь к нам и повышайте свой доход!</p>
 						<button class="mainbutt">Стать инвестором!</button>
 					</div>
+				</div>
+				<div id="myCanvasContainer">
+					<canvas width="450" height="450" id="myCanvas" >
+					<p>Anything in here will be replaced on browsers that support the canvas element</p>
+					<ul>
+					   	<li><a href=""><img src="img/tg1.png" alt=""></a></li>
+					   	<li><a href=""><img src="img/tg2.png" alt=""></a></li>
+					   	<li><a href=""><img src="img/tg3.png" alt=""></a></li>
+					   	<li><a href=""><img src="img/tg4.png" alt=""></a></li>
+					   	<li><a href=""><img src="img/tg5.png" alt=""></a></li>
+					   	<li><a href=""><img src="img/tg6.png" alt=""></a></li>
+					   	<li><a href=""><img src="img/tg7.png" alt=""></a></li>
+					   	<li><a href=""><img src="img/tg8.png" alt=""></a></li>
+					   	<li><a href=""><img src="img/tg9.png" alt=""></a></li>
+					   	<li><a href=""><img src="img/tg10.png" alt=""></a></li>
+					   	<li><a href=""><img src="img/tg11.png" alt=""></a></li>
+					   	<li><a href=""><img src="img/tg12.png" alt=""></a></li>
+					   	<li><a href=""><img src="img/tg13.png" alt=""></a></li>
+					   	<li><a href=""><img src="img/tg14.png" alt=""></a></li>
+					 </ul>
+					</canvas>
 				</div>
 			</div>	
 		</div>
@@ -429,6 +475,7 @@
 	-->
 	<script type="text/javascript" src="js/custom.js" ></script>
 	<script type="text/javascript" src="js/components/slick.js" ></script>
+	<script type="text/javascript" src="js/components/jquery.tagcanvas.js" ></script>
 	<script type="text/javascript" src="js/components/jquery.spincrement.js" ></script>
 </body>
 </html>
