--- a/go6percent/index.html
+++ b/go6percent/index.html
@@ -332,13 +332,13 @@
 							<a>Меню</a>
 							<img src="img/hamb.png" alt="">
 						</li>
-						<li><a href="">КОМПАНИи</a></li>
-						<li><a href="">КАК НАЧАТЬ</a></li>
-						<li><a href="">ИНВЕСТОРАМ</a></li>
-						<li><a href="">ПАРТНЁРАМ</a></li>
-						<li><a href="">ПРАВИЛА</a></li>
-						<li><a href="">FAQ</a></li>
-						<li><a href="">КОНТАКТЫ</a></li>
+						<li><a href="companies.html">КОМПАНИи</a></li>
+						<li><a href="howtostart.html">КАК НАЧАТЬ</a></li>
+						<li><a href="investors.html">ИНВЕСТОРАМ</a></li>
+						<li><a href="partners.html">ПАРТНЁРАМ</a></li>
+						<li><a href="rules.html">ПРАВИЛА</a></li>
+						<li><a href="faq.html">FAQ</a></li>
+						<li><a href="contacts.html">КОНТАКТЫ</a></li>
 					</ul>
 				</nav>
 			</div>	
@@ -355,13 +355,13 @@
 							<a href="">Меню</a>
 							<img src="img/hamb.png" alt="">
 						</li>
-						<li><a href="">КОМПАНИи</a></li>
-						<li><a href="">КАК НАЧАТЬ</a></li>
-						<li><a href="">ИНВЕСТОРАМ</a></li>
-						<li><a href="">ПАРТНЁРАМ</a></li>
-						<li><a href="">ПРАВИЛА</a></li>
-						<li><a href="">FAQ</a></li>
-						<li><a href="">КОНТАКТЫ</a></li>
+						<li><a href="companies.html">КОМПАНИи</a></li>
+						<li><a href="howtostart.html">КАК НАЧАТЬ</a></li>
+						<li><a href="investors.html">ИНВЕСТОРАМ</a></li>
+						<li><a href="partners.html">ПАРТНЁРАМ</a></li>
+						<li><a href="rules.html">ПРАВИЛА</a></li>
+						<li><a href="faq.html">FAQ</a></li>
+						<li><a href="contacts.html">КОНТАКТЫ</a></li>
 					</ul>
 				</nav>
 			</div>	
