--- a/go6percent/partners.html
+++ b/go6percent/partners.html
@@ -79,13 +79,13 @@
 							<a>Меню</a>
 							<img src="img/hamb.png" alt="">
 						</li>
-						<li><a href="">КОМПАНИи</a></li>
-						<li><a href="">КАК НАЧАТЬ</a></li>
-						<li><a href="">ИНВЕСТОРАМ</a></li>
-						<li><a href="">ПАРТНЁРАМ</a></li>
-						<li><a href="">ПРАВИЛА</a></li>
-						<li><a href="">FAQ</a></li>
-						<li><a href="">КОНТАКТЫ</a></li>
+						<li><a href="companies.html">КОМПАНИи</a></li>
+						<li><a href="howtostart.html">КАК НАЧАТЬ</a></li>
+						<li><a href="investors.html">ИНВЕСТОРАМ</a></li>
+						<li><a href="partners.html">ПАРТНЁРАМ</a></li>
+						<li><a href="rules.html">ПРАВИЛА</a></li>
+						<li><a href="faq.html">FAQ</a></li>
+						<li><a href="contacts.html">КОНТАКТЫ</a></li>
 					</ul>
 				</nav>
 			</div>	
@@ -102,59 +102,17 @@
 							<a href="">Меню</a>
 							<img src="img/hamb.png" alt="">
 						</li>
-						<li><a href="">КОМПАНИи</a></li>
-						<li><a href="">КАК НАЧАТЬ</a></li>
-						<li><a href="">ИНВЕСТОРАМ</a></li>
-						<li><a href="">ПАРТНЁРАМ</a></li>
-						<li><a href="">ПРАВИЛА</a></li>
-						<li><a href="">FAQ</a></li>
-						<li><a href="">КОНТАКТЫ</a></li>
+						<li><a href="companies.html">КОМПАНИи</a></li>
+						<li><a href="howtostart.html">КАК НАЧАТЬ</a></li>
+						<li><a href="investors.html">ИНВЕСТОРАМ</a></li>
+						<li><a href="partners.html">ПАРТНЁРАМ</a></li>
+						<li><a href="rules.html">ПРАВИЛА</a></li>
+						<li><a href="faq.html">FAQ</a></li>
+						<li><a href="contacts.html">КОНТАКТЫ</a></li>
 					</ul>
 				</nav>
 			</div>	
 		</div>		
-		<div class="headerbott">
-			<div class="wrapper">
-				<div class="headerbott__info">
-					<div class="slide">
-						<h2>ВЫСОКАЯ И СТАБИЛЬНАЯ<br> ПРИБЫЛЬ</h2>
-						<p>Go 6 Percen — лидер майнинга и трейдинга криптовалют на международных биржах! <br> За 5 лет работы мы достигли колоссальных результатов и теперь перед нами стоят<br> новые задачи. Мы приносим высокую и стабильную прибыль каждому нашему<br> партнеру. Присоединяйтесь к нам и повышайте свой доход!</p>
-						<button class="mainbutt">Стать инвестором!</button>
-					</div>
-					<div class="slide">
-						<h2>ВЫСОКАЯ И СТАБИЛЬНАЯ<br> ПРИБЫЛЬ</h2>
-						<p>Go 6 Percen — лидер майнинга и трейдинга криптовалют на международных биржах! <br> За 5 лет работы мы достигли колоссальных результатов и теперь перед нами стоят<br> новые задачи. Мы приносим высокую и стабильную прибыль каждому нашему<br> партнеру. Присоединяйтесь к нам и повышайте свой доход!</p>
-						<button class="mainbutt">Стать инвестором!</button>
-					</div>
-					<div class="slide">
-						<h2>ВЫСОКАЯ И СТАБИЛЬНАЯ<br> ПРИБЫЛЬ</h2>
-						<p>Go 6 Percen — лидер майнинга и трейдинга криптовалют на международных биржах! <br> За 5 лет работы мы достигли колоссальных результатов и теперь перед нами стоят<br> новые задачи. Мы приносим высокую и стабильную прибыль каждому нашему<br> партнеру. Присоединяйтесь к нам и повышайте свой доход!</p>
-						<button class="mainbutt">Стать инвестором!</button>
-					</div>
-				</div>
-				<div id="myCanvasContainer">
-					<canvas width="450" height="450" id="myCanvas" >
-					<p>Anything in here will be replaced on browsers that support the canvas element</p>
-					<ul>
-					   	<li><a href=""><img src="img/tg1.png" alt=""></a></li>
-					   	<li><a href=""><img src="img/tg2.png" alt=""></a></li>
-					   	<li><a href=""><img src="img/tg3.png" alt=""></a></li>
-					   	<li><a href=""><img src="img/tg4.png" alt=""></a></li>
-					   	<li><a href=""><img src="img/tg5.png" alt=""></a></li>
-					   	<li><a href=""><img src="img/tg6.png" alt=""></a></li>
-					   	<li><a href=""><img src="img/tg7.png" alt=""></a></li>
-					   	<li><a href=""><img src="img/tg8.png" alt=""></a></li>
-					   	<li><a href=""><img src="img/tg9.png" alt=""></a></li>
-					   	<li><a href=""><img src="img/tg10.png" alt=""></a></li>
-					   	<li><a href=""><img src="img/tg11.png" alt=""></a></li>
-					   	<li><a href=""><img src="img/tg12.png" alt=""></a></li>
-					   	<li><a href=""><img src="img/tg13.png" alt=""></a></li>
-					   	<li><a href=""><img src="img/tg14.png" alt=""></a></li>
-					 </ul>
-					</canvas>
-				</div>
-			</div>	
-		</div>
 		<img src="img/arrow.png" alt="" class="header__down">
 	</header>
 	
