--- a/go6percent/contacts.html
+++ b/go6percent/contacts.html
@@ -68,7 +68,7 @@
 		</div>
 		<div class="headernav">
 			<div class="wrapper">
-				<a href="" class="headernav__logo">
+				<a href="index.html" class="headernav__logo">
 					<img src="img/logo.png" alt="" class="logo">
 					<img src="img/item1.png" alt="" class="item1">
 					<img src="img/item2.png" alt="" class="item2">
@@ -91,7 +91,7 @@
 			</div>	
 		</div><div class="headernav navigation_fixed">
 			<div class="wrapper">
-				<a href="" class="headernav__logo">
+				<a href="index.html" class="headernav__logo">
 					<img src="img/logo.png" alt="" class="logo">
 					<img src="img/item1.png" alt="" class="item1">
 					<img src="img/item2.png" alt="" class="item2">
@@ -122,7 +122,44 @@
 	
 	<footer>
 		<div class="wrapper">
-			
+			<div class="footertop">
+				<a href="" class="headernav__logo">
+					<img src="img/logo.png" alt="" class="logo">
+					<img src="img/item1.png" alt="" class="item1">
+					<img src="img/item2.png" alt="" class="item2">
+				</a>
+				<nav class="footertop__nav">
+					<ul class="footertop__ul">
+						<li class="footertop__li"><a class="footertop__a" href="">О компании</a></li>
+						<li class="footertop__li"><a class="footertop__a" href="">Как начать</a></li>
+						<li class="footertop__li"><a class="footertop__a" href="">Инвесторам</a></li>
+						<li class="footertop__li"><a class="footertop__a" href="">Партнерам</a></li>
+					</ul>
+				</nav>
+				<nav class="footertop__nav">
+					<ul class="footertop__ul">
+						<li class="footertop__li"><a class="footertop__a" href="">Правила</a></li>
+						<li class="footertop__li"><a class="footertop__a" href="">FAQ</a></li>
+						<li class="footertop__li"><a class="footertop__a" href="">Контакты</a></li>
+					</ul>
+				</nav>
+				<div class="headertop__icons">
+					<a href=""><img src="img/h1.png" alt=""></a>
+					<a href=""><img src="img/h2.png" alt=""></a>
+					<a href=""><img src="img/h3.png" alt=""></a>
+				</div>
+				<div class="headertop__info">
+					<div class="headertop__phone">
+						<i></i><a href="tel:(+38 044) 555-77-55">(+38 044) 555-77-55</a>
+					</div>
+					<div class="headertop__email">
+						<i></i><a href="mailto:support@g6p.org">support@g6p.org</a>
+					</div>
+				</div>
+			</div>
+			<div class="footerbott">
+				<p class="footerbott__copyright">Copyright © 2017 Go 6 Percent. All Rights Reserved.</p>
+			</div>
 		</div>	
 	</footer>
 	
