--- a/go6percent/index.html
+++ b/go6percent/index.html
@@ -135,6 +135,7 @@
 					<img src="img/pay1.png" alt="" class="sponsors__item">
 					<img src="img/pay2.png" alt="" class="sponsors__item">
 					<img src="img/pay3.png" alt="" class="sponsors__item">
+					<img src="img/pay6.png" alt="" class="sponsors__item">
 					<img src="img/pay4.png" alt="" class="sponsors__item">
 					<img src="img/pay5.png" alt="" class="sponsors__item">
 				</div>
@@ -218,12 +219,19 @@
 			<div class="bitcoin__graph">
 				<img src="img/graph.png" alt="">
 				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_1">
+				<p class="btc__price btc__price_1">1 BTC = <span class="usd">0</span>$</p>
 				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_2">
+				<p class="btc__price btc__price_2">1 BTC = <span class="usd">0</span>$</p>
 				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_3">
+				<p class="btc__price btc__price_3">1 BTC = <span class="usd">0</span>$</p>
 				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_4">
+				<p class="btc__price btc__price_4">1 BTC = <span class="usd">0</span>$</p>
 				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_5">
+				<p class="btc__price btc__price_5">1 BTC = <span class="usd">0</span>$</p>
 				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_6">
+				<p class="btc__price btc__price_6">1 BTC = <span class="usd">0</span>$</p>
 				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_7">
+				<p class="btc__price btc__price_7">1 BTC = <span class="usd">0</span>$</p>
 				<p class="bitcoin__day bitcoin__day_1">ПН.<span class="data1"></span></p>
 				<p class="bitcoin__day bitcoin__day_2">ВТ.<span class="data2"></span></p>
 				<p class="bitcoin__day bitcoin__day_3">СР.<span class="data3"></span></p>
@@ -321,7 +329,7 @@
 		</div>
 		<div class="headernav">
 			<div class="wrapper">
-				<a href="" class="headernav__logo">
+				<a href="index.html" class="headernav__logo">
 					<img src="img/logo.png" alt="" class="logo">
 					<img src="img/item1.png" alt="" class="item1">
 					<img src="img/item2.png" alt="" class="item2">
@@ -344,7 +352,7 @@
 			</div>	
 		</div><div class="headernav navigation_fixed">
 			<div class="wrapper">
-				<a href="" class="headernav__logo">
+				<a href="index.html" class="headernav__logo">
 					<img src="img/logo.png" alt="" class="logo">
 					<img src="img/item1.png" alt="" class="item1">
 					<img src="img/item2.png" alt="" class="item2">
@@ -477,5 +485,6 @@
 	<script type="text/javascript" src="js/components/slick.js" ></script>
 	<script type="text/javascript" src="js/components/jquery.tagcanvas.js" ></script>
 	<script type="text/javascript" src="js/components/jquery.spincrement.js" ></script>
+	<script type="text/javascript" src="js/get_bitcoin.js" ></script>
 </body>
 </html>
