--- a/training2/index.html
+++ b/training2/index.html
@@ -251,7 +251,7 @@
 						за продуктом его создателя с близкими им ценнос-
 						тями. На этом курсе вы научитесь вовлекать 
 						с первых строк, подавать любую информацию вкусно, искренне, с эмоциями, делиться провалами и успехами так, чтобы клиенты захотели купить именно у вас. </p>
-						<p>С помощью простых схем, упражнений и обратной связи по созданным текстам мы поможем каждому участнику находить темы и <b>писать вовлекающие продающие истории</b> из вашей<br> реальной жизни и бизнеса, проработаем страх «чистого листа» и «комплекс самозванца». Для успешного прохождения курса не нужно быть писателем! Нужно просто ежедневно выполнять задания.</p>
+						<p>С помощью простых схем, упражнений и обратной связи по созданным текстам мы поможем каждому участнику находить темы и <b>писать вовлекающие продающие истории</b> из вашей реальной жизни и бизнеса, проработаем страх «чистого листа» и «комплекс самозванца». Для успешного прохождения курса не нужно быть писателем! Нужно просто ежедневно выполнять задания.</p>
 						<p><b>Дополнительный эффект курса:</b> повышениесамооценки, стоимости ваших продуктов 
 						и программ, ключи доступа к сердцу любой аудитории, продажи даже после одного поста 
 						в соцсетях.
