--- a/training2/index.html
+++ b/training2/index.html
@@ -53,7 +53,7 @@
 					</div>
 					<div class="allbuttons">
 						<img src="img/arrowbl.png" alt="" class="allbuttons__arrow allbuttons__arrow_left">
-						<input type="submit" class="allbuttons__input" value="ЗАРЕГИСТРИРОВАТЬСЯ">
+						<input type="submit" class="allbuttons__input to_b11 to_b11" value="ЗАРЕГИСТРИРОВАТЬСЯ">
 						<img src="img/arrowbl.png" alt="" class="allbuttons__arrow allbuttons__arrow_r allbuttons__arrow_right">
 					</div>
 				</div>
@@ -136,7 +136,7 @@
 				</div>
 				<div class="allbuttons">
 					<img src="img/arrow.png" alt="" class="allbuttons__arrow allbuttons__arrow_left">
-					<input type="submit" class="allbuttons__input allbuttons__input_bl" value="ЗАРЕГИСТРИРОВАТЬСЯ">
+					<input type="submit" class="allbuttons__input allbuttons__input_bl to_b11" value="ЗАРЕГИСТРИРОВАТЬСЯ">
 					<img src="img/arrow.png" alt="" class="allbuttons__arrow allbuttons__arrow_r allbuttons__arrow_right">
 				</div>
 			</div>
@@ -435,7 +435,7 @@
 				</div>
 				<div class="allbuttons">
 					<img src="img/arrowbl.png" alt="" class="allbuttons__arrow allbuttons__arrow_left">
-					<input type="submit" class="allbuttons__input allbuttons__input_bl" value="ЗАРЕГИСТРИРОВАТЬСЯ">
+					<input type="submit" class="allbuttons__input allbuttons__input_bl to_b11" value="ЗАРЕГИСТРИРОВАТЬСЯ">
 					<img src="img/arrowbl.png" alt="" class="allbuttons__arrow allbuttons__arrow_r allbuttons__arrow_right">
 				</div>
 			</div>
